argocd/raw-manifests/local-staging/sample-ai/frontend-vs.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: sample-ai-frontend-vs
  namespace: istio-system
spec:
  hosts:
    - "sample-ai.staging.local"
  gateways:
    - istio-ingressgateway-staging
  http:
    - route:
        - destination:
            host: sample-ai-frontend-staging-service.sample-ai-staging.svc.cluster.local
            port:
              number: 80
